# usage-radar

./: .gitignore  LICENSE  README.md  index.html  package.json  start.bat  vite.config.ts
docs/: README.ja.md  README.ko.md  README.zh-CN.md  README.zh-TW.md
scripts/: build.bat  build.ps1  build.sh  start.ps1  start.sh
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  scheduler.rs  settings.rs
src-tauri/src/sources/: claude.rs  codex.rs  mod.rs
