[package]
name = "usage-radar"
version = "0.0.1"
description = "Local usage radar for Claude Code and OpenAI Codex CLI"
edition = "2021"
rust-version = "1.77"

[lib]
name = "usage_radar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
