[package]
name = "usage-radar"
version = "0.1.0"
description = "Local usage radar for Claude Code and OpenAI Codex CLI"
edition = "2021"
rust-version = "1.77"

[lib]
name = "usage_radar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
notify = "6"
anyhow = "1"
thiserror = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
